nuevas ubicaciones de folders

--- a/2-notebooks/2.3-Introduccion_a_python.ipynb
+++ b/2-notebooks/2.3-Introduccion_a_python.ipynb
@@ -11,8 +11,8 @@
     "### Este notebook hace parte del curso [**Introducción a la ciencia de datos**](https://github.com)\n",
     "\n",
     "<p float=\"left\">\n",
-    "  <img src=\"../imagenes/python-logo.png\" alt=\"drawing\" width=\"200\"/>\n",
-    "  <img src=\"../imagenes/mck-logo.png\" alt=\"drawing\" width=\"150\"/>\n",
+    "  <img src=\"../99-imagenes/python-logo.png\" alt=\"drawing\" width=\"200\"/>\n",
+    "  <img src=\"../99-imagenes/mck-logo.png\" alt=\"drawing\" width=\"150\"/>\n",
     "</p>\n",
     "\n",
     "### Objetivos \n",
