--- a/3-ejercicios/2.5-Introduccion_a_pandas-ejercicio.ipynb
+++ b/3-ejercicios/2.5-Introduccion_a_pandas-ejercicio.ipynb
@@ -8,10 +8,10 @@
     "\n",
     "Por: [Ivan Torroledo](https://github.com/torroledo) \n",
     "\n",
-    "### Este notebook hace parte del curso [**Introducción a la ciencia de datos**](https://github.com)\n",
+    "### Este notebook hace parte del curso [**Capacitación de Analytics**](https://github.com/Torroledo/codes-capability-building-DS-DE)\n",
     "\n",
     "\n",
-    "Haremos un de las ventas de un supermercado. En este ejercicio simularemos el análisis de datos con data real. El archivo `/1-datasets/modulo-2/2.4-supermarket_sales.txt` tiene los datos de ventas para un periodo de tiempo del año 2019. El objetivo es:\n",
+    "Haremos un análisis de las ventas de un supermercado usando data real. El archivo `/1-datasets/modulo-2/2.4-supermarket_sales.txt` tiene los datos de ventas para un periodo de tiempo del año 2019. El objetivo es:\n",
     "\n",
     "1. Leer el archivo en formato `txt` \n",
     "2. Hacer validación de los tipos de datos y \"castear\" las variables según sea el caso.\n",
