--- a/3-ejercicios/2.4-Introducción_a_python-ejercicio.ipynb
+++ b/3-ejercicios/2.4-Introducción_a_python-ejercicio.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Por: [Ivan Torroledo](https://github.com/torroledo) \n",
     "\n",
-    "### Este notebook hace parte del curso [**Introducción a la ciencia de datos**](https://github.com)\n",
+    "### Este notebook hace parte del curso [**Capacitación de Analytics**](https://github.com/Torroledo/codes-capability-building-DS-DE)\n",
     "\n",
     "Dado los datos, estimar la regresión lineal de la ecuación de la oferta:\n",
     "\n",
